Updated css and images
Updated css and images

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
     --font-family: "Inter", sans-serif;
     --teal: #00adb5;
-    --dark: #1e1e1e;
+    --dark: black;
     --white: #eeeeee;
     --gray: #393e46;
     --dark-gray: #222831;
